force-app/main/default/objects/leankor__KeyInitiative__c/leankor__KeyInitiative__c.object-meta.xml
<CustomObject>
    <description>Critical initiatives that the division requires to succeed. Each has one or more projects associated with them.</description>
    <label>Key Initiative</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Key Initiative Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Key Initiatives</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>