force-app/main/default/objects/leankor__KeyInitiative__c/fields/leankor__EndDate__c.field-meta.xml
<CustomField>
    <fullName>leankor__EndDate__c</fullName>
    <defaultValue>Today() + 30*6</defaultValue>
    <description>When this key initiative is expected to complete. Value streams, zones and kanban cards will continue to operate as normal after the end date. This date is used to calculate actual vs. expected goal achievement.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Enter the date when this key initiative is expected to complete. Value streams, zones and kanban cards will continue to operate as normal after the end date.</inlineHelpText>
    <label>Target Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>