force-app/main/default/objects/leankor__KeyInitiative__c/fields/leankor__Financial_Target__c.field-meta.xml
<CustomField>
    <fullName>leankor__Financial_Target__c</fullName>
    <inlineHelpText>This is the financial target for the key initiative. It could be revenue, cost, margin dollars, etc...</inlineHelpText>
    <label>Financial Target</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>