force-app/main/default/objects/leankor__KeyInitiative__c/fields/leankor__Hours_Effort_Target__c.field-meta.xml
<CustomField>
    <fullName>leankor__Hours_Effort_Target__c</fullName>
    <inlineHelpText>Total person-hours effort allocated to the initiative.</inlineHelpText>
    <label>Hours Effort Target</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>