force-app/main/default/objects/leankor__KeyInitiative__c/fields/leankor__KPICurrentValue__c.field-meta.xml
<CustomField>
    <fullName>leankor__KPICurrentValue__c</fullName>
    <defaultValue>0.5</defaultValue>
    <description>The current KPI value. It will be compared against the goal value.</description>
    <inlineHelpText>Enter the current key performance indicator value.</inlineHelpText>
    <label>Key Performance Indicator</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>