force-app/main/default/objects/leankor__KeyInitiative__c/fields/leankor__KPIGoal__c.field-meta.xml
<CustomField>
    <fullName>leankor__KPIGoal__c</fullName>
    <defaultValue>1.00</defaultValue>
    <description>The key metric for judging if the initiative is a success.</description>
    <inlineHelpText>Enter a value, ratio, dollar amount, or other metric which best articulates whether this key initiative has delivered on its promise.</inlineHelpText>
    <label>Key Performance Goal</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>