force-app/main/default/objects/leankor__KeyInitiative__c/fields/leankor__KPIGoalName__c.field-meta.xml
<CustomField>
    <fullName>leankor__KPIGoalName__c</fullName>
    <defaultValue>&apos;My make-or-break goal percentage&apos;</defaultValue>
    <description>The text description of this KPI</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Enter a short description of this KPI goal.</inlineHelpText>
    <label>KPI Goal Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>