force-app/main/default/objects/leankor__KeyInitiative__c/fields/leankor__Quality_Target__c.field-meta.xml
<CustomField>
    <fullName>leankor__Quality_Target__c</fullName>
    <inlineHelpText>This is a percent increase of quality to target with the initiative.</inlineHelpText>
    <label>Quality Target</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>