force-app/main/default/objects/leankor__KeyInitiative__c/fields/leankor__Quantity_Target__c.field-meta.xml
<CustomField>
    <fullName>leankor__Quantity_Target__c</fullName>
    <inlineHelpText>This can be any quantity or value item.</inlineHelpText>
    <label>Quantity Target</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>