force-app/main/default/objects/leankor__KeyInitiative__c/fields/leankor__StartDate__c.field-meta.xml
<CustomField>
    <fullName>leankor__StartDate__c</fullName>
    <defaultValue>Today()</defaultValue>
    <description>When this key initiative will kick off.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Enter the start date of this key initiative.</inlineHelpText>
    <label>Start Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>