force-app/main/default/objects/leankor__KeyInitiative__c/fields/leankor__Status__c.field-meta.xml
<CustomField>
    <fullName>leankor__Status__c</fullName>
    <description>Overall status of the key initiative</description>
    <inlineHelpText>Enter the overall status of this key initiative in relation to how it is tracking to stated goals.</inlineHelpText>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Green</fullName>
                <default>true</default>
                <label>Green</label>
            </value>
            <value>
                <fullName>Yellow</fullName>
            </value>
            <value>
                <fullName>Red</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>