force-app/main/default/objects/leankor__KeyInitiative__c/listViews/leankor__All.listView-meta.xml
<ListView>
    <fullName>leankor__All</fullName>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>